@@ -1,4 +1,5 @@
 import java.io.File;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
@@ -11,6 +12,9 @@ import javax.xml.transform.dom.DOMSource;
 import javax.xml.transform.stream.StreamResult;
 
 import org.w3c.dom.Document;
+import org.w3c.dom.Element;
+import org.w3c.dom.Node;
+import org.w3c.dom.NodeList;
 
 public class XMLProcessor {
 
@@ -18,19 +22,29 @@ public class XMLProcessor {
 
 	public static List<List<String>> read(String fileName) {
 		File f = new File(fileName);
-		if (!f.exists()) {
-			return Collections.emptyList();
-		}
+
 
 		DocumentBuilderFactory dbf = DocumentBuilderFactory.newInstance();
 		DocumentBuilder db;
+		List<String> keys = new ArrayList<>();
+		List<String> states = new ArrayList<>();
 		try {
 			db = dbf.newDocumentBuilder();
 			Document doc = db.parse(f);
-
 			doc.getDocumentElement().normalize();
 
 			// TODO
+
+			NodeList childNodes = doc.getFirstChild().getChildNodes();
+			System.out.println(childNodes.getLength());
+			for (int i = 0; i < childNodes.getLength(); i++) {
+				 Node node = childNodes.item(i);
+				 if (node instanceof Element) {
+					 Element element = (Element) node;
+					 keys.add(element.getNodeName());
+					 states.add(element.getTextContent());
+				 }
+			}
 			// ########## YOUR CODE STARTS HERE ##########
 			// HINT: You can use getChildNodes() function in the XML library to obtain a
 			// list of child nodes of the parent tag STATE_ROOT_ELEMENT.
@@ -40,7 +54,7 @@ public class XMLProcessor {
 			e.printStackTrace();
 		}
 
-		return Collections.emptyList();
+		return List.of(keys, states);
 	}
 
 	public static void write(String fileName, List<String> keys, List<String> states) {
@@ -57,6 +71,13 @@ public class XMLProcessor {
 
 			// TODO
 			// ########## YOUR CODE STARTS HERE ##########
+			Element rootNode = doc.createElement(STATE_ROOT_ELEMENT);
+			doc.appendChild(rootNode);
+			for (int i = 0; i < Math.min(keys.size(), states.size()); i++) {
+				Element currentNode = doc.createElement(keys.get(i));
+				currentNode.appendChild(doc.createTextNode(states.get(i)));
+				rootNode.appendChild(currentNode);
+			}
 
 			// ########## YOUR CODE ENDS HERE ##########
 
